[gd_scene load_steps=10 format=3 uid="uid://c0diii2blledv"]

[ext_resource type="Script" uid="uid://cat20rmem2240" path="res://Scripts/PlayerandItems/PlayerController.gd" id="1_xwiga"]
[ext_resource type="PackedScene" uid="uid://bqy33rwx6p2gu" path="res://Scenes/pausemenu.tscn" id="2_c0kcq"]
[ext_resource type="PackedScene" uid="uid://huhgi0dcuejl" path="res://Scenes/inventory.tscn" id="2_cmbys"]
[ext_resource type="Script" uid="uid://ccis4h1w4vupa" path="res://Scripts/PlayerandItems/newInventory.gd" id="3_6nwty"]
[ext_resource type="Script" uid="uid://dv0pclrwv35av" path="res://Scripts/PlayerandItems/item.gd" id="4_uuggy"]
[ext_resource type="AudioStream" uid="uid://nhmaa8pk8xqh" path="res://Resources/Sound/SFX/step_metal.ogg" id="6_mg8ua"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_0j8gy"]
height = 4.0

[sub_resource type="CapsuleMesh" id="CapsuleMesh_rjcbi"]
height = 4.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_8wdyx"]
playback_mode = 1
random_pitch = 1.5
random_volume_offset_db = 2.0
streams_count = 1
stream_0/stream = ExtResource("6_mg8ua")

[node name="CharacterBody3D" type="CharacterBody3D" groups=["player"]]
safe_margin = 0.01
script = ExtResource("1_xwiga")

[node name="inventory" parent="." instance=ExtResource("2_cmbys")]
unique_name_in_owner = true
script = ExtResource("3_6nwty")

[node name="EmptyHand" type="MeshInstance3D" parent="inventory"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.79706, 0.88582206, -1.7467281)
layers = 2
skeleton = NodePath("../../Pivot/Hand")
script = ExtResource("4_uuggy")

[node name="pausemenu" parent="." instance=ExtResource("2_c0kcq")]
z_index = 1

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_0j8gy")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("CapsuleMesh_rjcbi")

[node name="Pivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6396, -0.561918)

[node name="head" type="Camera3D" parent="Pivot"]
unique_name_in_owner = true
cull_mask = 1048573
current = true
fov = 90.0

[node name="flashlight" type="Node3D" parent="Pivot/head"]
unique_name_in_owner = true

[node name="largest" type="SpotLight3D" parent="Pivot/head/flashlight"]
layers = 3
light_energy = 0.2
distance_fade_enabled = true
spot_range = 8.0
spot_angle = 50.0

[node name="medium" type="SpotLight3D" parent="Pivot/head/flashlight"]
layers = 3
distance_fade_enabled = true
spot_range = 12.0
spot_angle = 40.0

[node name="small" type="SpotLight3D" parent="Pivot/head/flashlight"]
layers = 3
light_energy = 1.5
distance_fade_enabled = true
spot_range = 16.0
spot_angle = 15.0

[node name="SubViewportContainer" type="SubViewportContainer" parent="Pivot/head"]
process_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="Pivot/head/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="viewmodel" type="Camera3D" parent="Pivot/head/SubViewportContainer/SubViewport"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6396, -0.561918)
cull_mask = 2
fov = 90.0

[node name="Hand" type="Marker3D" parent="Pivot"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.79706, -0.753778, -1.18481)

[node name="crosshair" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1.0
offset_top = -1.0
offset_right = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 1, 1, 0.509804)

[node name="ammo_charge" type="Timer" parent="."]
wait_time = 5.0

[node name="steps" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="sprint" type="Timer" parent="."]
wait_time = 0.35
one_shot = true

[node name="step_sound" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2, 0)
stream = SubResource("AudioStreamRandomizer_8wdyx")
volume_db = -35.0
panning_strength = 0.4
bus = &"Sfx"

[connection signal="timeout" from="ammo_charge" to="." method="_on_ammo_charge_timeout"]
[connection signal="timeout" from="steps" to="." method="_on_steps_timeout"]
[connection signal="timeout" from="sprint" to="." method="_on_steps_timeout"]
